@@ -16,6 +16,7 @@ PHP                                                                        NEWS
 
 - FPM:
   . Fixed bug GH-10611 (fpm_env_init_main leaks environ). (nielsdos)
+  . Destroy file_handle in fpm_main. (Jakub Zelenka, nielsdos)
 
 - FTP:
   . Propagate success status of ftp_close(). (nielsdos)
